--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,44 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+a {
+  text-decoration: none;
+}
+
+h3 {
+  color: black;
+}
+
+button {
+  
+  background-color: #081f2d;
+  border: 1px solid #081f2d;
+  color: white;
+  font-size: 15px;
+  padding: 10px 15px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+button:hover {
+  background-color: white;
+  color: #081f2d;
+  border-color: #081f2d;
+  transition: 0.3s;
 }
